--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<h3>
 		<ol>
 			<li> 
-			 	<span class="rosepink">Master of Pharmacy (Clinical Pharmacy): <em>Universiti Sains Malaysia</em></span>
+			 	<span class="darkorange">Master of Pharmacy (Clinical Pharmacy): <em>Universiti Sains Malaysia</em></span>
 			</li>
 			<li> 
 				<span class="crimson">Bachelor of Pharmacy (Honours): Monash University</span>
